# NFRG

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/NFRG/anim/: alpha.hpp  animator.hpp  animator_builder.hpp  motion.hpp  note_motion.hpp
include/NFRG/mgr/: audio.hpp  config.hpp  font.hpp  scene.hpp  video.hpp
include/NFRG/platform/: platform.hpp
include/NFRG/scene/: scene.hpp
include/NFRG/scene/impl/: gameplay.hpp  latency.hpp  result.hpp  select.hpp  settings.hpp  splash.hpp
include/NFRG/ui/: base.hpp  button.hpp  component.hpp  flex.hpp  group.hpp  image.hpp  list.hpp  static_text.hpp  text.hpp
include/NFRG/ui/builder/: base.hpp  component.hpp  flex.hpp  group.hpp  list.hpp
include/NFRG/ui/gameplay/: board.hpp  lane.hpp  note.hpp
include/NFRG/ui/latency/: detection_line.hpp
include/NFRG/ui/select/: beatmap_selector.hpp  beatmap_set.hpp
include/NFRG/ui/splash/: icon.hpp
include/NFRG/util/: beatmap.hpp  beatmap_set.hpp
res/: AppRun  NFRG.desktop
src/NFRG/: CMakeLists.txt  main.cpp
src/NFRG/anim/: alpha.cpp  animator.cpp  motion.cpp  note_motion.cpp
src/NFRG/mgr/: audio.cpp  config.cpp  font.cpp  scene.cpp  video.cpp
src/NFRG/platform/: linux.cpp  platform.cpp  windows.cpp
src/NFRG/scene/: scene.cpp
src/NFRG/scene/impl/: gameplay.cpp  latency.cpp  result.cpp  select.cpp  settings.cpp  splash.cpp
src/NFRG/ui/: base.cpp  button.cpp  component.cpp  flex.cpp  group.cpp  image.cpp  list.cpp  static_text.cpp  text.cpp
src/NFRG/ui/gameplay/: board.cpp  lane.cpp  note.cpp
src/NFRG/ui/latency/: detection_line.cpp
src/NFRG/ui/select/: beatmap_selector.cpp  beatmap_set.cpp
src/NFRG/ui/splash/: icon.cpp
src/NFRG/util/: beatmap_set.cpp
